<resources>
    <string name="app_name">meo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_bottom">首页</string>
    <string name="discovery">发现</string>
    <string name="categories">分类</string>
    <string name="no_comment_tips">暂时没有评论，请稍后再来吧！</string>
    <string name="pic_download">下载图片</string>
    <string name="comment">评论</string>
    <string name="recommend">推荐</string>
    <string name="loading">正在加载，请稍后...</string>
    <string name="computer_wallper">电脑壁纸</string>
    <string name="skip">Skip</string>
    <string name="know">知道了</string>
    <string name="setting">设置</string>
    <string name="theme">主题颜色</string>
    <string name="splash">首页图</string>
</resources>
