<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/nav_computer"
        android:icon="@drawable/ic_setting"
        android:title="@string/computer_wallper" />

    <!--<item-->
        <!--android:id="@+id/nav_hot_search"-->
        <!--android:icon="@drawable/ic_hot"-->
        <!--android:title="@string/title_notifications" />-->

    <!--<item-->
        <!--android:id="@+id/nav_mine"-->
        <!--android:icon="@drawable/ic_mine"-->
        <!--android:title="@string/title_notifications" />-->

</menu>
